--- a/Activity Mandiri/index.xhtml
+++ b/Activity Mandiri/index.xhtml
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <h1>Contact U</h1>
+        <h1>Contact Us</h1>
 
         <form id="contact" method="post" action="">
             <fieldset>
