--- a/Activity Mandiri/index.xhtml
+++ b/Activity Mandiri/index.xhtml
@@ -12,7 +12,7 @@
 
         <form id="contact" method="post" action="">
             <fieldset>
-                <legend>Form Kontak</legend>
+                <legend>Form Konta</legend>
                 <table summary="Form kontak sederhana">
                     <tr>
                         <td class="labelcell">
